--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,12 +29,15 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
   font_awesome_flutter: ^8.8.1
+  http: ^0.12.2
   intl: ^0.16.1
   smooth_star_rating: ^1.1.1
+  xml: 4.2.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  test: ^1.15.3
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
