--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,11 +32,10 @@ dependencies:
   http: ^0.12.2
   intl: ^0.16.1
   smooth_star_rating: ^1.1.1
+  url_launcher: ^5.6.0
   xml: 4.2.0
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
   test: ^1.15.3
 
 # For information on the generic Dart part of this file, see the
