--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,15 +28,18 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
+  flutter_plugin_pdf_viewer: ^1.0.7
   font_awesome_flutter: ^8.8.1
   http: ^0.12.2
   intl: ^0.16.1
   smooth_star_rating: ^1.1.1
   url_launcher: ^5.6.0
-  xml: 4.2.0
+  xml: ^3.3.1
 
 dev_dependencies:
-  test: ^1.15.3
+  flutter_test:
+    sdk: flutter
+  test: ^1.15.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
