--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -7,12 +7,17 @@ jobs:
 
     runs-on: ubuntu-latest
 
-    container:
-      image:  google/dart:latest
-
     steps:
     - uses: actions/checkout@v2
+    - uses: actions/setup-java@v1
+      with:
+        java-version: '12.x'
+    - uses: subosito/flutter-action@v1.3.2
+      with:
+        flutter-version: '1.20.4'
     - name: Install dependencies
-      run: pub get
+      run: flutter pub get
     - name: Run tests
-      run: pub run test
+      run: flutter test
+    - name: Build APK
+      run: flutter build apk
