--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
-  flutter_plugin_pdf_viewer: ^1.0.7
+  flutter_cached_pdfview: ^0.2.3+3
   flutter_tex: ^3.6.7+9
   font_awesome_flutter: ^8.8.1
   http: ^0.12.2
