--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,8 @@ dependencies:
   font_awesome_flutter: ^8.8.1
   http: ^0.12.2
   intl: ^0.16.1
-  smooth_star_rating: ^1.1.1
+  path: ^1.7.0
+  sqflite: ^1.3.0
   url_launcher: ^5.6.0
   xml: ^3.3.1
 
