--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   http: ^0.12.2
   intl: ^0.16.1
   path: ^1.7.0
+  provider: ^4.3.2+2
   sqflite: ^1.3.0
   url_launcher: ^5.6.0
   xml: ^3.3.1
