--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   path: ^1.7.0
   path_provider: ^1.6.18
   provider: ^4.3.2+2
+  rate_my_app: ^0.7.2
   share: '>=0.6.5+2 <2.0.0'
   sqflite: ^1.3.0
   url_launcher: ^5.6.0
