--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -4,20 +4,19 @@ on: [push, pull_request]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-    - uses: actions/setup-java@v1
-      with:
-        java-version: '12.x'
-    - uses: subosito/flutter-action@v1.3.2
-      with:
-        flutter-version: '1.20.4'
-    - name: Install dependencies
-      run: flutter pub get
-    - name: Run tests
-      run: flutter test
-    - name: Build APK
-      run: flutter build apk
+      - uses: actions/checkout@v2
+      - uses: actions/setup-java@v1
+        with:
+          java-version: '11.x'
+      - uses: subosito/flutter-action@v1.3.2
+        with:
+          flutter-version: '1.20.4'
+      - name: Install dependencies
+        run: flutter pub get
+      - name: Run tests
+        run: flutter test
+      - name: Build APK
+        run: flutter build appbundle
