--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -18,5 +18,5 @@ jobs:
         run: flutter pub get
       - name: Run tests
         run: flutter test
-      - name: Build APK
-        run: flutter build appbundle
+      - name: Build App Bundle
+        run: flutter build appbundle --debug
